--- a/Modulo 4/index.html
+++ b/Modulo 4/index.html
@@ -9,8 +9,11 @@
   </head>
   <body>
     <div class="turno-display">
-      <h1 class="numero-turno">01</h1>
+      <h1 id="numero-turno">01</h1>
       <p class="texto-turno">Por favor, acérquese al mostrador</p>
+      <button id="btn-anterior-turno">Anterior</button>
+      <button id="btn-siguiente-turno">Siguiente</button>
+      <button type="reset" id="btn-reset">Reset</button>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
