--- a/Modulo 4/index.html
+++ b/Modulo 4/index.html
@@ -11,9 +11,15 @@
     <div class="turno-display">
       <h1 id="numero-turno">01</h1>
       <p class="texto-turno">Por favor, acérquese al mostrador</p>
-      <button id="btn-anterior-turno">Anterior</button>
-      <button id="btn-siguiente-turno">Siguiente</button>
-      <button type="reset" id="btn-reset">Reset</button>
+      <div class="btn">
+        <button id="btn-anterior-turno">Anterior</button>
+        <button id="btn-siguiente-turno">Siguiente</button>
+        <button type="reset" id="btn-reset">Reset</button>
+      </div>
+        <label for="caja-texto"></label>
+        <input type="number" id="caja-texto" min="0" max="100" />
+        <button id="btn-cambiar">Cambiar</button>
+      </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
