--- a/Modulo 5/index.html
+++ b/Modulo 5/index.html
@@ -7,19 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
   </head>
+  <header>
+    <div class="marco-puntuacion">
+      <h1>Score:</h1>
+      <p id="score">0</p>
+    </div>
+    <div class="title">
+      <h2>Siete y Media</h2>
+    </div>
+  </header>
   <body>
-    <div class="turno-display">
-      <h1 id="numero-turno">01</h1>
-      <p class="texto-turno">Por favor, acérquese al mostrador</p>
-      <div class="btn">
-        <button id="btn-anterior-turno">Anterior</button>
-        <button id="btn-siguiente-turno">Siguiente</button>
-        <button type="reset" id="btn-reset">Reset</button>
+    <div class="cartas">
+      <div id="mazo">
+        <img src="./img/back.jpg" alt="mazo de cartas" />
       </div>
-        <label for="caja-texto"></label>
-        <input type="number" id="caja-texto" min="0" max="100" />
-        <button id="btn-cambiar">Cambiar</button>
-      </div>
+      <div id="bocaArriba"></div>
+    </div>
+    <div class="buttons">
+      <button id="btn-start">Iniciar partida</button>
+      <button id="btn-restart">Reiniciar partida</button>
+      <button id="btn-coger">Coger Carta</button>
+      <button id="btn-fin">Finalizar Partida</button>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
