--- a/Modulo 5/index.html
+++ b/Modulo 5/index.html
@@ -26,7 +26,7 @@
     <div class="buttons">
       <button id="btn-start">Iniciar partida</button>
       <button id="btn-restart">Reiniciar partida</button>
-      <button id="btn-coger">Coger Carta</button>
+      <button id="btn-coger">Pedir Carta</button>
       <button id="btn-fin">Finalizar Partida</button>
     </div>
     <script type="module" src="/src/main.ts"></script>
