--- a/Modulo 5/index.html
+++ b/Modulo 5/index.html
@@ -27,7 +27,7 @@
       <button id="btn-start">Iniciar partida</button>
       <button id="btn-restart">Reiniciar partida</button>
       <button id="btn-coger">Pedir Carta</button>
-      <button id="btn-fin">Finalizar Partida</button>
+      <button id="btn-fin">Me Planto</button>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
