--- a/Modulo 5/index.html
+++ b/Modulo 5/index.html
@@ -24,10 +24,10 @@
       <div id="bocaArriba"></div>
     </div>
     <div class="buttons">
-      <button id="btn-start">Iniciar partida</button>
       <button id="btn-restart">Reiniciar partida</button>
       <button id="btn-coger">Pedir Carta</button>
       <button id="btn-fin">Me Planto</button>
+      <button id="btn-saber">¿Qué hubiese pasado?</button>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
