--- a/Modulo 5/index.html
+++ b/Modulo 5/index.html
@@ -19,7 +19,7 @@
   <body>
     <div class="cartas">
       <div id="mazo">
-        <img src="./img/back.jpg" alt="mazo de cartas" />
+        <img id="imagenCarta" src="./img/back.jpg" alt="mazo de cartas" />
       </div>
       <div id="bocaArriba"></div>
     </div>
