--- a/Modulo 8.3/index.html
+++ b/Modulo 8.3/index.html
@@ -22,6 +22,11 @@
           <div data-indice-array="10" data-indice-imagen="10" class="cardcontainer"><img src="" alt=""></div>
           <div data-indice-array="11" data-indice-imagen="11" class="cardcontainer"><img src="" alt=""></div>
         </div>
+        <div class="parametros">
+          <div id="puntuacion">0/6</div>
+          <p id="textoPuntuacion">PAREJAS ENCONTRADAS</p>
+          <button id="btn">Reiniciar Partida</button>
+        </div>
       </body>
     <script type="module" src="/src/main.ts"></script>
   </body>
