--- a/Modulo 8.3/index.html
+++ b/Modulo 8.3/index.html
@@ -9,18 +9,18 @@
   </head>
       <body>
         <div class="grid-container" id="containercards">
-          <div data-indice-array="0" data-indice-imagen="0" class="cardcontainer" id="carta"><img src="" alt=""></div>
-          <div data-indice-array="1" data-indice-imagen="1" class="cardcontainer" id="carta2"><img src="" alt=""></div>
-          <div data-indice-array="2" data-indice-imagen="2" class="cardcontainer"><img src="" alt=""></div>
-          <div data-indice-array="3" data-indice-imagen="3" class="cardcontainer"><img src="" alt=""></div>
-          <div data-indice-array="4" data-indice-imagen="4" class="cardcontainer"><img src="" alt=""></div>
-          <div data-indice-array="5" data-indice-imagen="5" class="cardcontainer"><img src="" alt=""></div>
-          <div data-indice-array="6" data-indice-imagen="6" class="cardcontainer"><img src="" alt=""></div>
-          <div data-indice-array="7" data-indice-imagen="7" class="cardcontainer"><img src="" alt=""></div>
-          <div data-indice-array="8" data-indice-imagen="8" class="cardcontainer"><img src="" alt=""></div>
-          <div data-indice-array="9" data-indice-imagen="9" class="cardcontainer"><img src="" alt=""></div>
-          <div data-indice-array="10" data-indice-imagen="10" class="cardcontainer"><img src="" alt=""></div>
-          <div data-indice-array="11" data-indice-imagen="11" class="cardcontainer"><img src="" alt=""></div>
+          <div data-indice-array="0" data-indice-imagen="0" class="cardcontainer" id="carta"><img data-indice-array="0" src="" alt=""></div>
+          <div data-indice-array="1" data-indice-imagen="1" class="cardcontainer" id="carta2"><img data-indice-array="1" src="" alt=""></div>
+          <div data-indice-array="2" data-indice-imagen="2" class="cardcontainer"><img data-indice-array="2" src="" alt=""></div>
+          <div data-indice-array="3" data-indice-imagen="3" class="cardcontainer"><img data-indice-array="3" src="" alt=""></div>
+          <div data-indice-array="4" data-indice-imagen="4" class="cardcontainer"><img data-indice-array="4" src="" alt=""></div>
+          <div data-indice-array="5" data-indice-imagen="5" class="cardcontainer"><img data-indice-array="5"  src="" alt=""></div>
+          <div data-indice-array="6" data-indice-imagen="6" class="cardcontainer"><img data-indice-array="6" src="" alt=""></div>
+          <div data-indice-array="7" data-indice-imagen="7" class="cardcontainer"><img data-indice-array="7" src="" alt=""></div>
+          <div data-indice-array="8" data-indice-imagen="8" class="cardcontainer"><img data-indice-array="8" src="" alt=""></div>
+          <div data-indice-array="9" data-indice-imagen="9" class="cardcontainer"><img data-indice-array="9" src="" alt=""></div>
+          <div data-indice-array="10" data-indice-imagen="10" class="cardcontainer"><img data-indice-array="10" src="" alt=""></div>
+          <div data-indice-array="11" data-indice-imagen="11" class="cardcontainer"><img data-indice-array="11" src="" alt=""></div>
         </div>
         <div class="parametros">
           <div id="puntuacion">0/6</div>
