--- a/Modulo 11/index.html
+++ b/Modulo 11/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="./estilos.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mortadelo y Filemon</title>
+    <title>COMPROBAR CUENTA</title>
   </head>
       <body>        
         <div class="root">
@@ -14,17 +14,13 @@
           <form class="formulario">
             <div class="grupo-formulario">
             <label for="search">Ingrese el número de cuenta a comprobar:</label>
-          <input type="search" name="search" id="search"></div> 
+          <input type="search" name="search" id="search" ></div> 
         <div class="grupo-formulario">
           <button type="button" class="btn" id="btn-filtro"> <img src="./img/search-icon.svg" alt="icono de lupa para buscar">
           </button>
         </div> </form>
         </div>
-        <div class="bien-formado"><h3></h3></div>
-        <div class="esValido"><h3></h3></div>
-        <div class="banco"></div>
-        <div class="sucursal"></div>
-        <div class="digitodecontrol"></div>
+        <div id="numero-cuenta" class="numero-cuenta"></div>
       </div>      
         <div id="cuenta-iban" class=""></div>
          <script type="module" src="/src/cuenta-iban.ts"></script>
