--- a/Modulo 11/index.html
+++ b/Modulo 11/index.html
@@ -20,7 +20,7 @@
           </button>
         </div> </form>
         </div>
-        <div id="numero-cuenta" class="numero-cuenta"></div>
+        <div id="datos-cuenta" class="datos-cuenta"></div>
       </div>      
         <div id="cuenta-iban" class=""></div>
          <script type="module" src="/src/cuenta-iban.ts"></script>
